src/main/java/com/rptsec/translator/splantlr/SplParser.java
// Generated from /Users/rohitprasad/spock/core/siem/src/main/java/com/rptsec/translator/splgrammar/Spl.g4 by ANTLR 4.9
package com.rptsec.translator.splantlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		BOOLEAN=60, Join=61, Where=62, WS=63, WSC=64, NUM=65, ALPHANUM=66, ALPHANUM_QUOTES=67, 
		ALPHANUM_QUOTES_WC=68, ALPHANUM_WC=69, BOOL=70;
	public static final int
		RULE_plusMinusOperator = 0, RULE_field = 1, RULE_fieldWithWildChar = 2, 
		RULE_fieldWithOperator = 3, RULE_sortByClause = 4, RULE_fieldList = 5, 
		RULE_projectionField = 6, RULE_projectionFieldList = 7, RULE_sortCommand = 8, 
		RULE_dedupCommand = 9, RULE_fieldsPlusMinus = 10, RULE_fieldsCommand = 11, 
		RULE_headCommand = 12, RULE_renamedField = 13, RULE_renameCommand = 14, 
		RULE_statsAggrOpWithCol = 15, RULE_statsAggregationExpr = 16, RULE_statsCommand = 17, 
		RULE_searchCommand = 18, RULE_datasetSpecifier = 19, RULE_whereClause = 20, 
		RULE_parseExp = 21, RULE_exp = 22, RULE_exprMulti = 23, RULE_exprExplicitExpr = 24, 
		RULE_exprImplicitExpr = 25, RULE_expr = 26, RULE_cmpExplicitExpr = 27, 
		RULE_cmpImplicitExpr = 28, RULE_justCmp = 29, RULE_cmp = 30, RULE_expression = 31, 
		RULE_expressionT = 32, RULE_cmpLHS = 33, RULE_cmpRHS = 34, RULE_comparison = 35, 
		RULE_booleanOperator = 36, RULE_comparator = 37, RULE_fieldValueList = 38, 
		RULE_substringPlaceholder = 39, RULE_joinStr = 40, RULE_joinType = 41, 
		RULE_joinTypeValue = 42, RULE_joinConstraints = 43, RULE_leftAlias = 44, 
		RULE_rightAlias = 45, RULE_columnName = 46, RULE_condition = 47, RULE_joinEqualities = 48, 
		RULE_namedDataset = 49, RULE_dataset = 50, RULE_lookupCommand = 51, RULE_lookupMatchOn = 52, 
		RULE_lookupOutput = 53, RULE_lookupOptionLocal = 54, RULE_lookupOptionUpdate = 55, 
		RULE_lookupTableName = 56, RULE_lookupField = 57, RULE_lookupEventField = 58, 
		RULE_lookupDestField = 59, RULE_lookupDestFieldAlias = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"plusMinusOperator", "field", "fieldWithWildChar", "fieldWithOperator", 
			"sortByClause", "fieldList", "projectionField", "projectionFieldList", 
			"sortCommand", "dedupCommand", "fieldsPlusMinus", "fieldsCommand", "headCommand", 
			"renamedField", "renameCommand", "statsAggrOpWithCol", "statsAggregationExpr", 
			"statsCommand", "searchCommand", "datasetSpecifier", "whereClause", "parseExp", 
			"exp", "exprMulti", "exprExplicitExpr", "exprImplicitExpr", "expr", "cmpExplicitExpr", 
			"cmpImplicitExpr", "justCmp", "cmp", "expression", "expressionT", "cmpLHS", 
			"cmpRHS", "comparison", "booleanOperator", "comparator", "fieldValueList", 
			"substringPlaceholder", "joinStr", "joinType", "joinTypeValue", "joinConstraints", 
			"leftAlias", "rightAlias", "columnName", "condition", "joinEqualities", 
			"namedDataset", "dataset", "lookupCommand", "lookupMatchOn", "lookupOutput", 
			"lookupOptionLocal", "lookupOptionUpdate", "lookupTableName", "lookupField", 
			"lookupEventField", "lookupDestField", "lookupDestFieldAlias"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'''", "','", "'sort'", "'SORT'", "'desc'", "'dedup'", 
			"'DEDUP'", "'keepevents='", "'keepempty='", "'consecutive='", "'sortby'", 
			"'fields'", "'FIELDS'", "'head'", "'HEAD'", "'AS'", "'as'", "'rename'", 
			"'RENAME'", "'count'", "'sum'", "'avg'", "'('", "')'", "'stats'", "'STATS'", 
			"'BY'", "'by'", "'SEARCH'", "'sourcetype'", "'host'", "'source'", "'index'", 
			"'='", "'NOT'", "'[SS]'", "'IN'", "'AND'", "'OR'", "'!='", "'<'", "'<='", 
			"'>'", "'>='", "'type='", "'inner'", "'outer'", "'left'", "'left='", 
			"'right='", "'.'", "'lookup'", "'LOOKUP'", "'local='", "'update='", "'OUTPUT'", 
			"'OUTPUTNEW'", null, "'JOIN'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"BOOLEAN", "Join", "Where", "WS", "WSC", "NUM", "ALPHANUM", "ALPHANUM_QUOTES", 
			"ALPHANUM_QUOTES_WC", "ALPHANUM_WC", "BOOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Spl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PlusMinusOperatorContext extends ParserRuleContext {
		public PlusMinusOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plusMinusOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterPlusMinusOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitPlusMinusOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SplVisitor ) return ((SplVisitor<? extends T>)visitor).visitPlusMinusOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlusMinusOperatorContext plusMinusOperator() throws RecognitionException {
		PlusMinusOperatorContext _localctx = new PlusMinusOperatorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_plusMinusOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TerminalNode ALPHANUM() { return getToken(SplParser.ALPHANUM, 0); }
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SplVisitor ) return ((SplVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ALPHANUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldWithWildCharContext extends ParserRuleContext {
		public TerminalNode ALPHANUM_WC() { return getToken(SplParser.ALPHANUM_WC, 0); }
		public FieldWithWildCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldWithWildChar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterFieldWithWildChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitFieldWithWildChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SplVisitor ) return ((SplVisitor<? extends T>)visitor).visitFieldWithWildChar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldWithWildCharContext fieldWithWildChar() throws RecognitionException {
		FieldWithWildCharContext _localctx = new FieldWithWildCharContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fieldWithWildChar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__2);
			setState(127);
			match(ALPHANUM_WC);
			setState(128);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldWithOperatorContext extends ParserRuleContext {
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public PlusMinusOperatorContext plusMinusOperator() {
			return getRuleContext(PlusMinusOperatorContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(SplParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SplParser.WS, i);
		}
		public FieldWithOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldWithOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterFieldWithOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitFieldWithOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SplVisitor ) return ((SplVisitor<? extends T>)visitor).visitFieldWithOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldWithOperatorContext fieldWithOperator() throws RecognitionException {
		FieldWithOperatorContext _localctx = new FieldWithOperatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldWithOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0 || _la==T__1) {
				{
				setState(130);
				plusMinusOperator();
				}
			}

			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(133);
				match(WS);
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			field();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortByClauseContext extends ParserRuleContext {
		public List<FieldWithOperatorContext> fieldWithOperator() {
			return getRuleContexts(FieldWithOperatorContext.class);
		}
		public FieldWithOperatorContext fieldWithOperator(int i) {
			return getRuleContext(FieldWithOperatorContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(SplParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SplParser.WS, i);
		}
		public SortByClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sortByClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterSortByClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitSortByClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SplVisitor ) return ((SplVisitor<? extends T>)visitor).visitSortByClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortByClauseContext sortByClause() throws RecognitionException {
		SortByClauseContext _localctx = new SortByClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sortByClause);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(157); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(141);
					fieldWithOperator();
					setState(145);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(142);
							match(WS);
							}
							} 
						}
						setState(147);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__3) {
						{
						setState(148);
						match(T__3);
						}
					}

					setState(154);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(151);
							match(WS);
							}
							} 
						}
						setState(156);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(159); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldListContext extends ParserRuleContext {
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(SplParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SplParser.WS, i);
		}
		public FieldListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterFieldList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitFieldList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SplVisitor ) return ((SplVisitor<? extends T>)visitor).visitFieldList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldListContext fieldList() throws RecognitionException {
		FieldListContext _localctx = new FieldListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fieldList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(183); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==WS) {
						{
						{
						setState(161);
						match(WS);
						}
						}
						setState(166);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(167);
					field();
					setState(171);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(168);
							match(WS);
							}
							} 
						}
						setState(173);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
					}
					setState(175);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__3) {
						{
						setState(174);
						match(T__3);
						}
					}

					setState(180);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(177);
							match(WS);
							}
							} 
						}
						setState(182);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(185); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectionFieldContext extends ParserRuleContext {
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public FieldWithWildCharContext fieldWithWildChar() {
			return getRuleContext(FieldWithWildCharContext.class,0);
		}
		public ProjectionFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projectionField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).enterProjectionField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SplListener ) ((SplListener)listener).exitProjectionField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SplVisitor ) return ((SplVisitor<? extends T>)visitor).visitProjectionField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectionFieldContext projectionField() throws RecognitionException {
		ProjectionFieldContext _localctx = new ProjectionFieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_projectionField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALPHANUM:
				{
				setState(187);
				field();
				}
				break;
			case T__2:
				{
				setState(188);
				fieldWithWildChar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
